<resources>
    <string name="app_name">SendMeal</string>
    <string name="registro_titulo">Registrar Usuario</string>
    <string name="registro_nombre">Nombre:</string>
    <string name="registro_password">Password:</string>
    <string name="registro_password2">Repetir password:</string>
    <string name="registro_email">E-mail:</string>
    <string name="registro_tarjetaCredito">Tarjeta de Crédito</string>
    <string name="registro_credito">Crédito Inicial</string>
    <string name="registro_notificacionEmail">Notificar por e-mail</string>
    <string name="regsitro_vendedor">Es vendedor?</string>
    <string name="registro_CtaAlias">Alias CBU:</string>
    <string name="registro_CtaCBU">CBU:</string>
    <string name="registro_tipoCuenta">Tipo de Cuenta</string>
    <string name="registro_numeroSeguridad">CCV</string>
    <string name="registro_numeroTarjeta">Número</string>
    <string name="registro_dateVencimientoMonth">MM</string>
    <string name="registro_dateVencimientoYear">AA</string>
    <string name="cuentaBase">Base</string>
    <string name="cuentaPremium">Premium</string>
    <string name="cuentaFull">Full</string>
    <string name="registro_terminosYCondiciones">Aceptar terminos y condiciones</string>
    <string name="button_registrar">Registrar</string>
    <string name="activarNotificaciones">Activado</string>
    <string name="desactivarNotificaciones">Desactivado</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="passwordError"></string>
    <string name="textViewValorCredito">0</string>
    <string name="textViewDateSeparador">/</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_registrarme">Registrar usuario</string>
    <string name="menu_crear_plato">Crear plato</string>
    <string name="menu_listar_item">Lista de platos</string>
    <string name="itemRegistrarme">Registrarme</string>
    <string name="itemCrearPLato">Crear plato</string>
    <string name="itemListarPLatos">Lista de platos</string>

    <string name="id_alta_plato">ID Plato:</string>
    <string name="alta_plato_nombre">Nombre:</string>
    <string name="alta_plato_descripcion">Descripcion:</string>
    <string name="alta_platp_precio">Precio:</string>
    <string name="alta_plato_calorias">Calorias:</string>
    <string name="alta_plato_guardar">Guardar</string>
    <string name="menu_home">Home</string>
    <string name="itemHome">Home</string>
    <string name="boton_editar_plato">Editar</string>
    <string name="boton_ofertar_plato">Oferta</string>
    <string name="boton_eliminar_plato">Eliminar</string>
    <string name="channel_name">SendMealNotification</string>
    <string name="channel_description">Este canal se ocupa de administrar las notificaciones de SendMeal</string>

    <string name="itemCrearPedido">Crear Pedido</string>
    <string name="buttonCrearPedido">Crear Pedido</string>
    <string name="buttonEnviarPedido">Enviar Pedido</string>
    <string name="agregarPlato">Agregar plato a mi pedido: </string>
    <string name="buttonAgregarPlato">Agregar</string>
    <string name="nombrePlatoPedido">Nombre</string>
    <string name="descripcionPLatoPedido">Descripcion</string>
    <string name="precioPlatoPedido">Precio</string>
    <string name="buttonPlusPlato">+</string>
    <string name="buttonMinusPlato">-</string>
    <string name="buttonAgregarAMiPedido">Agregar plato a mi pedido</string>

    <string name="buttonQuitarPlatoAMiPedido">Quitar plato del pedido</string>
    <string name="botonAgregarUbicacion">Agregar ubicacion</string>
    <string name="misPedidos">Mis Pedidos</string>

    <string name="botonSacarFoto">Sacar foto</string>

</resources>
