<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_little_home"
            android:title="@string/itemHome" />
        <item
            android:id="@+id/navigation_registrarme"
            android:icon="@drawable/ic_add_new_user"
            android:title="@string/itemRegistrarme" />
        <item
            android:id="@+id/navigation_crear_plato"
            android:icon="@drawable/ic_dish"
            android:title="@string/itemCrearPLato" />
        <item
            android:id="@+id/navigation_listar_items"
            android:icon="@drawable/ic_dish"
            android:title="@string/itemListarPLatos" />
        <item
            android:id="@+id/navigation_crear_pedido"
            android:icon="@drawable/ic_dish"
            android:title="@string/itemCrearPedido" />
        <item
            android:id="@+id/navigation_mis_pedidos"
            android:icon="@drawable/ic_dish"
            android:title="@string/misPedidos" />

    </group>

</menu>