<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_titulo" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_nombre" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_password2" />

    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_email" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewTarjetaCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/registro_tarjetaCredito" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNumeroTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/registro_numeroTarjeta"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumeroSeguridadTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/registro_numeroSeguridad"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextDateVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/registro_dateVencimiento"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTipoDeCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_tipoCuenta" />

    <RadioGroup
        android:id="@+id/radioGroupTipoDeCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCuentaBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cuentaBase" />

        <RadioButton
            android:id="@+id/radioButtonCuentaPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cuentaPremium" />

        <RadioButton
            android:id="@+id/radioButtonCuentaFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cuentaFull" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCreditoInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_credito" />

    <SeekBar
        android:id="@+id/seekBarSeleccionCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewNotificacionEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_notificacionEmail" />

    <ToggleButton
        android:id="@+id/toggleButtonNotificarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activarNotificaciones"
        android:textOff="@string/desactivarNotificaciones"/>

    <Switch
        android:id="@+id/switchVendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regsitro_vendedor" />

    <LinearLayout
        android:id="@+id/linearLayoutCuentaBancaria"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAliasCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_CtaAlias" />

        <EditText
            android:id="@+id/editTextAliasCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textViewCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_CtaCBU" />

        <EditText
            android:id="@+id/editTextCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxTerminosYCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_terminosYCondiciones" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registrar" />
</LinearLayout>
</ScrollView>