<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    android:visibility="visible">

    <Button
        android:id="@+id/buttonCrearPedido"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bttn_rounded"
        android:text="@string/buttonCrearPedido"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnviarPedido"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEnviarPedido"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bttn_rounded"
        android:text="@string/buttonEnviarPedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAgregarPlato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAgregarPlato"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewBuscarPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewBuscarPedido" />

    <TextView
        android:id="@+id/textViewBuscarPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/agregarPlato"
        app:layout_constraintEnd_toStartOf="@+id/buttonAgregarPlato"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>